fix(scss) removed unneeded z-index on BModal

--- a/packages/bootstrap-vue-next/src/components/BModal/_modal.scss
+++ b/packages/bootstrap-vue-next/src/components/BModal/_modal.scss
@@ -1,7 +1,3 @@
 .modal {
   display: block;
 }
-
-.modal-dialog {
-  z-index: 1051;
-}
